...
                                <rect key="frame" x="38" y="543" width="299" height="46"/>
                                <color key="backgroundColor" red="0.85262101888656616" green="0.42218321561813354" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="46" id="M07-qh-IFe"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GESSTwoBold-Bold" family="GE SS Two" pointSize="17"/>
                                <state key="normal" title="دخول">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <integer key="value" value="23"/>
                                    </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="ylH-nw-X4u" firstAttribute="bottom" secondItem="J0N-Id-6hq" secondAttribute="bottom" constant="30" id="Iak-4v-CYP"/>
                            <constraint firstItem="J0N-Id-6hq" firstAttribute="leading" secondItem="ylH-nw-X4u" secondAttribute="leading" constant="16" id="WOp-ST-KQb"/>
                            <constraint firstItem="I1y-nV-rcD" firstAttribute="top" secondItem="Lhu-gc-HwN" secondAttribute="top" id="Y8n-TH-D0Y"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ylH-nw-X4u"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="المتاجر" image="house" catalog="system" id="njK-Go-fjF">
                        <color key="badgeColor" red="0.78738981490000004" green="0.2464441359" blue="0.27221894260000001" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="searchContainerView" destination="Ppy-Wl-0tc" id="GLK-mE-sgQ"/>
                        <outlet property="tableView" destination="DTR-5s-Boo" id="OAW-Kn-hgk"/>
                        <outlet property="titleLabel" destination="uad-sA-mfM" id="NWw-gH-Oq0"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Iz-lx-CVP" customClass="CustomizableView" customModule="queue___كيو" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="216.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="مواعيدي" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojI-gU-sOY" customClass="SpringLabel" customModule="S
                                        <rect key="frame" x="251" y="60" width="108" height="29"/>
                                        <fontDescription key="fontDescription" name="GESSTwoBold-Bold" family="GE SS Two" pointSize="27"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                    <constraint firstItem="uc7-QL-N1E" firstAttribute="top" secondItem="1m7-3O-Gnt" secondAttribute="top" id="duY-Oj-phC"/>
                                    <constraint firstAttribute="trailing" secondItem="uc7-QL-N1E" secondAttribute="trailing" id="lIX-L4-Viy"/>
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="BeC-37-C1M"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="aOX-IZ-Hwr"/>
                            </scrollView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="الهوية" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OC-Yx-mxY" customClass="SpringLabel" customModule="Spring">
                                <rect key="frame" x="277.5" y="40" width="81.5" height="29"/>
                                <fontDescription key="fontDescription" name="GESSTwoBold-Bold" family="GE SS Two" pointSize="27"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
